[gd_scene load_steps=5 format=2]

[ext_resource path="res://Script/Enemies/Enemy_5_Up.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemies/enemy_5-1.png.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/enemy_5-2.png.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
} ]

[node name="Enemy_5_1_Up" type="StaticBody2D"]
collision_layer = 8
script = ExtResource( 1 )

[node name="Enemy_5_1_AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 1

[node name="Enemy_5_1_Collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -8.51159, -5.7217, -7.07012, -2.5254, -4.56322, -1.52263, -4.24986, 6.24877, -6.45701, 9.62256, -8.91927, 9.62256, -14.4593, 13.7007, -14.4593, 15.4704, 14.2413, 15.5474, 14.1644, 13.6237, 8.83767, 9.75567, 6.16205, 9.77645, 4.46163, 5.81006, 4.64965, -1.1466, 7.09388, -2.5254, 8.47268, -5.28299, 5.46439, -9.35671, -5.18994, -9.35671 )

[node name="Enemy_5_1_Notifier" type="VisibilityNotifier2D" parent="."]

[node name="Enemy_5_PositionShot" type="Position2D" parent="."]
position = Vector2( 0, -22 )
